# vex-rt

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  armv7a-vex-eabi.json  build.rs  rust-toolchain
.cargo/: config
.github/workflows/: rust.yml
core/: Cargo.toml  build.rs
core/src/: lib.rs  motor.rs  robot.rs  rtos.rs  smart_port.rs
examples/: delay.rs  hello-world.rs  motors.rs  panic.rs  select.rs  select_merge.rs  sleep.rs  task.rs
firmware/: v5.ld
kernel/: template.pros
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: upload.sh
src/: allocator.rs  context.rs  entry.rs  error.rs  io.rs  lib.rs  motor.rs  peripherals.rs  prelude.rs  robot.rs  rtos.rs  smart_port.rs  task.rs  util.rs
src/bindings/: mod.rs  rtos.rs
src/macros/: entry.rs  mod.rs  select.rs
src/rtos/: context.rs  event.rs  loop.rs  mod.rs  mutex.rs
src/util/: cstring.rs  mod.rs  ord_arc.rs  ord_weak.rs  owner.rs  shared_set.rs
