[package]
name = "vex-rt"
version = "0.1.1"
description = "A Rust runtime for the Vex V5 built on top of PROS."
license = "MIT OR Apache-2.0"
authors = ["Timothy Morland <me@timothy-morland.com>"]
repository = "https://github.com/thetimmorland/vex-rt"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", default-features = false }
libc_alloc = "1.0.2"
rcstring = "0.2.1"
vex-rt-core = { path = "core", version = "0.1.0" }
vex-rt-macros = { path = "macros", version = "0.1.0" }

[dev-dependencies]
libc-print = "0.1.14"
