[package]
name = "vex-rt"
version = "0.1.0"
authors = ["Timothy Morland <me@timothy-morland.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vex-rt-macros = { version="0.1", path = "macros" }
libc = { version = "0.2", default-features = false }
libc-print = "0.1.14"
spin = "0.7.0"

[build-dependencies]
bindgen = "0.53.1"
