[package]
name = "vex-rt"
version = "0.1.0"
authors = ["Timothy Morland <me@timothy-morland.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", default-features = false }
libc-print = "0.1.14"
rcstring = "0.2.1"
spin = "0.7.0"

[build-dependencies]
bindgen = "0.53.1"
zip = "0.5.9"
zip-extensions = "0.6.0"
