[package]
name = "vex-rt-macros"
version = "0.1.0"
authors = ["Timothy Morland <me@timothy-morland.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
